src/System/Win32/Console/Console2.hsc


{- 
WINBASEAPI
DWORD
WINAPI
GetConsoleTitleW(
    _Out_writes_(nSize) LPWSTR lpConsoleTitle,
    _In_ DWORD nSize
    );
 -}
foreign import ccall "windows.h GetConsoleTitleW" c_GetConsoleTitleW :: HANDLE
                                                                     -> LPWSTR
                                                                     -> DWORD
                                                                     -> IO DWORD

-- getConsoleTitle :: DWORD -> IO WinString
-- getConsoleTitle l = do
--   newVectorWith $ \p -> do
--     p <- failIfZero "GetConsoleTitle"

{- 
WINBASEAPI
DWORD
WINAPI
GetConsoleOriginalTitleW(
    _Out_writes_(nSize) LPWSTR lpConsoleTitle,
    _In_ DWORD nSize
    );
 -}
foreign import ccall "windows.h GetConsoleOriginalTitleW" c_GetConsoleOriginalTitleW :: HANDLE
                                                                                     -> LPWSTR
                                                                                     -> DWORD
                                                                                     -> IO DWORD

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleTitleA(
    _In_ LPCSTR lpConsoleTitle
    );
 -}
foreign import ccall "windows.h SetConsoleTitleA" c_SetConsoleTitleA :: HANDLE
                                                                     -> LPSTR
                                                                     -> IO BOOL

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleTitleW(
    _In_ LPCWSTR lpConsoleTitle
    );
 -}
foreign import ccall "windows.h SetConsoleTitleW" c_SetConsoleTitleW :: HANDLE
                                                                     -> LPWSTR
                                                                     -> IO BOOL
